@@ -7,6 +7,3 @@ sqitch-show-usage - Sqitch show usage statement
   sqitch show <type> <object>
 
 C<< <type> >> can be one of: change, tag, deploy, revert, verify
-
-
-
