@@ -9,4 +9,3 @@ sqitch-tag-usage - Sqitch tag usage statement
 =head1 Options
 
     -n --note                 a note describing the tag
-
